Revamp Series Badge UI: Neon Theme, Glassmorphism, and LinkedIn Share

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -397,11 +397,11 @@ layout: default
                     <i class="fas fa-download"></i> Download Badge
                 </a>
                 
-                <a href="https://twitter.com/intent/tweet?text=I%20just%20completed%20the%20{{ page.series | uri_escape }}%20series%20by%20@Tharunaditya1!%20Check%20it%20out%20here:%20{{ page.url | absolute_url }}%20%F0%9F%8E%93%20%23Security%20%23Learning" 
+                <a href="https://www.linkedin.com/feed/?shareActive=true&text=I%20just%20completed%20the%20{{ page.series | uri_escape }}%20series%20by%20@Tharunaditya%20Anuganti!%20Check%20it%20out%20here:%20{{ page.url | absolute_url }}%20%23CyberSecurity%20%23Learning%20%23Microarchitecture" 
                    target="_blank" 
                    rel="noopener noreferrer"
-                   class="badge-action-btn share-btn">
-                    <i class="fab fa-twitter"></i> Share Achievement
+                   class="badge-action-btn share-btn-linkedin">
+                    <i class="fab fa-linkedin-in"></i> Share on LinkedIn
                 </a>
             </div>
         </div>
